<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Principal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cargarimagen"
        android:id="@+id/btCargarImagen"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="cargarImagen" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@+id/btCargarImagen"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:layout_below="@+id/btCargarImagen"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_margin="15dp"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/girar"
        android:id="@+id/btGirar"
        android:onClick="girar"
        android:layout_below="@+id/btCambiarColor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardarimagen"
        android:id="@+id/btGuardarImagen"
        android:onClick="guardar"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/relativeLayout"
        android:layout_alignEnd="@+id/relativeLayout" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etGuardarImagen"
        android:hint="@string/nombrefoto"
        android:layout_alignTop="@+id/btGuardarImagen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/btGuardarImagen"
        android:layout_toStartOf="@+id/btGuardarImagen" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cambiarcolor"
        android:id="@+id/btCambiarColor"
        android:onClick="cambiarColor"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
